# Chromatic_aberration_correction

./: .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  ColorAberrationCorrection.cpp  ColorAberrationCorrection.h
